Spoiler support(use [s]) for spoilers Quickemotemenu button overlap with textarea fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,27 @@
+.spoiler {
+	color:transparent !important;
+}
+
+.spoiler img {
+	display:none;
+}
+
+.spoiler:before {
+	content:"Spoiler";
+	display:block;
+	background:#1D1D1D;
+	color:#ADADAD !important;
+	min-height:30px;
+	text-align:center;
+	line-height:100%;
+	font-family:"Consolas";
+	padding-top:5px;
+}
+
+.emotemenu-enabled .channel-textarea-inner textarea {
+	margin-right:45px !important;
+}
+
 #bdbeta {
 	background:red;
 }
@@ -283,7 +307,7 @@
 
 
 #bd-ps-container {
-  position:fixed;
+	position:fixed;
 	width:50%;
 	height:75%;
 	background:rgb(46,49,54);
@@ -298,14 +322,14 @@
 }
 
 #bd-ps-header {
-  background:rgb(54,57,62);
+	background:rgb(54,57,62);
 	height:60px;
 	border-bottom:1px solid #000;
 	box-shadow:0 1px 0 0 rgb(78,78,78);
 }
 
 #bd-ps-header h2 {
-  margin:0;
+	margin:0;
 	line-height:60px;
 	margin-left:10px;
 	color:#ADADAD;
@@ -324,102 +348,102 @@
 }
 
 #bd-ps-body {
-    position: absolute;
-    padding: 0;
-    margin-top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 61px;
-  overflow:auto;
+	position: absolute;
+	padding: 0;
+	margin-top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 61px;
+	overflow:auto;
 }
 
 
 .bd-ps-server {
-  width:100%;
-  height:200px;
+	width:100%;
+	height:200px;
 }
 
 .bd-ps-server-header {
-  height:50px;
-  width:100%;
-  margin-top:1px;
-  background:#202020;
-  color:#AEAEAE;
-  line-height:50px;
-  font-size:20px;
+	height:50px;
+	width:100%;
+	margin-top:1px;
+	background:#202020;
+	color:#AEAEAE;
+	line-height:50px;
+	font-size:20px;
 }
 
 .bd-ps-server-header span {
-  margin-left:10px;
+	margin-left:10px;
 }
 
 .bd-ps-server-body {
-  padding:5px;
+	padding:5px;
 }
 
 .bd-ps-server-icon {
-  width:90px;
-  height:90px;
-  background:#202020;
-  display:inline-block;
+	width:90px;
+	height:90px;
+	background:#202020;
+	display:inline-block;
 }
 
 .bd-ps-server-info {
-  position:absolute;
-  height:190px;
-  display:inline-block;
-  left:100px;
-  right:5px;
-  color:#AEAEAE;
-  overflow:auto;
+	position:absolute;
+	height:190px;
+	display:inline-block;
+	left:100px;
+	right:5px;
+	color:#AEAEAE;
+	overflow:auto;
 }
 
 #bd-ps-body table {
-  width:100%;
-  margin:0;
-  padding:0;
-  border-color:red;
-  border-collapse:collapse;
-  text-align:left;
+	width:100%;
+	margin:0;
+	padding:0;
+	border-color:red;
+	border-collapse:collapse;
+	text-align:left;
 }
 
 #bd-ps-body table th {
-  background-color:#202020;
-  color:#EDEDED;
-  height:50px;
-  padding-left:5px;
+	background-color:#202020;
+	color:#EDEDED;
+	height:50px;
+	padding-left:5px;
 }
 
 #bd-ps-body table tr {
-  margin:0;
-  padding:0;
-  height:50px;
+	margin:0;
+	padding:0;
+	height:50px;
 }
 
 #bd-ps-body table tr{
-  background-color:#33363B;
-  border-bottom:1px solid #000;
-  box-shadow:0 1px 0 #404040 inset;
+	background-color:#33363B;
+	border-bottom:1px solid #000;
+	box-shadow:0 1px 0 #404040 inset;
 }
 
 #bd-ps-body table tr td {
-  padding-left:5px;
-  color:#EDEDED;
+	padding-left:5px;
+	color:#EDEDED;
 }
 
 #bd-ps-body table tr td {
-  min-width:100px;
+	min-width:100px;
 }
 
 #bd-ps-body .description {
-  overflow:auto;
-  max-height:60px;
-  word-wrap:break-word;
+	overflow:auto;
+	max-height:60px;
+	word-wrap:break-word;
 }
 
 #bd-ps-body table tr:nth-child(odd) {
-  background-color:#2E3136;
+	background-color:#2E3136;
 }
 
 #bd-show-channels {
